Text wrap fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -139,6 +139,10 @@ html {
   font-size: 120%;
 }
 
+p {
+  white-space: nowrap;
+}
+
 .homeLink {
   pointer-events: none;
 }
